# devin_okawa

./: .env.example  .gitignore  API_USAGE_GUIDE.md  README.md  STARTUP_GUIDE.md  activate_env.sh  comprehensive_debug.py  config.py  debug_404_reproduction.py  debug_paths.py  debug_routes.py  index.html  main.py  pyproject.toml  requirements.txt  start.sh  start_app.sh  start_dev.sh  start_wsl.py  test_azure_openai_complete.py  test_config.py  test_imports.py  test_new_structure.py  test_oauth2.py  test_structure_fix.py  test_system_integration.py  test_wsl_compatibility.py  修正計画書_ログイン404エラー.md
env/: .env  .env.example
meeting_minutes_api/: .env  README.md  pyproject.toml  work_plan.md
meeting_minutes_api/app/: main.py
meeting_minutes_api/work_plans/: api_endpoints_plan.md  meeting_minutes_formatter_plan.md  transcript_processor_plan.md
modules/: azure_openai_client.py  health.py  items.py  llm.py  meeting_minutes.py  minutes_generator.py  prompt.py
routers/: items.py  llm.py  meeting_minutes.py  minutes.py  root.py
sample_data/: sample_transcription.txt
schemas/: base.py  items.py  llm.py  meeting_minutes.py
src/: config.py  main.py  requirements.txt
src/api/: main.py
src/auth/: dependencies.py  oauth2.py
src/dependencies/: __init__.py  auth.py
src/middleware/: auth.py
src/minutes/: generator.py
src/modules/: auth.py  azure_openai_client.py  logger.py  logger_config.py  minutes_generator.py  openai_client.py  transcript_processor.py  user_store.py
src/routers/: auth.py  minutes.py
src/schemas/: auth.py  common.py  minutes.py  transcript.py
src/transcription/: preprocessor.py
templates/: index.html  minutes_template.html
test0/: .env.example  README.md  requirements.txt  test_basic_functionality.py
test0/config/: settings.py
test0/src/ai/: summarizer.py
test0/src/minutes/: formatter.py
test0/src/transcription/: parser.py
test0/templates/: index.html
test0/tests/: test_transcription.py
tests/: conftest.py  test_api_integration.py  test_auth.py  test_auth_api.py  test_azure_openai_client.py  test_config.py  test_logger.py  test_main.py  test_minutes_api.py  test_persistent_auth.py  test_schemas.py  test_security.py  test_transcript_processor.py  test_user_store.py
transcript-minutes-api-001/: test_import_fix.py
transcript-minutes-api-001/src/: main.py
transcript-minutes-api-001/src/modules/: transcript_processor.py
transcript-minutes-api-001/src/schemas/: minutes.py
transcript_minutes_api/: .env  README.md  meeting_minutes.db  pyproject.toml
transcript_minutes_api/app/: config.py  database.py  dependencies.py  main.py  models.py
transcript_minutes_api/app/modules/: auth.py  graph_client.py  logger.py  minutes_formatter.py  transcript_processor.py
transcript_minutes_api/app/routers/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api/app/schemas/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api2/: .env  README.md  meeting_minutes.db  pyproject.toml  test_minutes.py
transcript_minutes_api2/app/: config.py  database.py  dependencies.py  main.py  models.py
transcript_minutes_api2/app/modules/: auth.py  graph_client.py  logger.py  minutes_formatter.py  transcript_processor.py
transcript_minutes_api2/app/routers/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api2/app/schemas/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api3/: .env  README.md  meeting_minutes.db  pyproject.toml
transcript_minutes_api3/app/: config.py  dependencies.py  main.py  models.py
transcript_minutes_api3/app/modules/: graph_client.py  logger.py  minutes_formatter.py
transcript_minutes_api3/app/routers/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api3/app/schemas/: auth.py  graph.py
transcript_minutes_api4/: .env  README.md  meeting_minutes.db  pyproject.toml
transcript_minutes_api4/app/: config.py  dependencies.py  main.py  models.py
transcript_minutes_api4/app/modules/: auth.py  graph_client.py  logger.py  minutes_formatter.py  transcript_processor.py
transcript_minutes_api4/app/routers/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api4/app/schemas/: graph.py  minutes.py  users.py
utils/: logger.py
テスト仕様書/: .gitkeep  テスト仕様書_ログイン_01.md  テスト仕様書_議事録生成アプリ_OAuth2認証.md  単体テスト仕様書.md  単体テスト実施報告書.md  結合テスト仕様書.md  結合テスト実施報告書.md  総合テスト仕様書.md  総合テスト実施報告書.md
修正計画/: FastAPI_OAuth2_実装完了.md  OAuth2_分析_比較.md  wsl_debug_and_fix.md  修正計画書01_環境変数設定改善.md  修正計画書02_pydantic設定最新化.md
実装計画/: トークン受け渡し自動化実装案.md  実装計画_ログイン_01.md  実装計画_ログイン_02.md  実装計画_ログイン_03.md  実装計画書.md  実装計画書01.md  実装計画書_議事録生成アプリ_OAuth2認証.md  設計書作成計画書.md
改修トレーサビリティ/: OAuth2_persistent_login_implementation.md  access_token_blacklist_implementation.md
設計書/: API設計書.md  システム設計書.md  データベース設計書.md
