[tool.poetry]
name = "fastapi-basic"
version = "0.1.0"
description = "FastAPI application for meeting minutes generation"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
openai = "^1.95.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
