[tool.poetry]
name = "meeting-minutes-generator"
version = "1.0.0"
description = "FastAPI application for generating meeting minutes from transcripts using OpenAI"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
openai = "1.3.7"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"
uvicorn = {version = "0.24.0", extras = ["standard"]}
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
