[tool.poetry]
name = "meeting-minutes-api"
version = "0.1.0"
description = "FastAPI application for generating meeting minutes from transcripts"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = "^1.3.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
